--- a/css/styles.css
+++ b/css/styles.css
@@ -25,14 +25,14 @@ body {
     width:200px;
 }
 
-.search {
+.searchWrapper {
     display:flex;
     align-items: center;
     height:10vh;
     width: 100%;
 }
 
-.search>* {
+.searchWrapper>* {
     margin: 10px;
     height: 8vh;
     flex-grow: 1;
@@ -44,7 +44,7 @@ body {
 .inputWrapper {
     flex-grow: 2;
 }
-#searchInput {
+.searchInput {
     width:100%;
     padding:0;
     margin:0;
