--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,19 @@ body {
     display: flex;
     justify-content: center;
 }
+
+h1 a {
+    text-decoration: none;
+    color:black;
+}
+
+h2 {
+    text-align: center;
+}
 .wrapper {
     display:flex;
     flex-flow: column;
-    width: 98%;
-    margin: 0 1%;
+    margin: 0 auto;
     justify-content: center;
     align-items: center;
 }
@@ -35,7 +43,8 @@ body {
     display:flex;
     align-items: center;
     height:10vh;
-    width: 100%;
+    width:100%
+
 }
 
 .searchWrapper>* {
@@ -47,6 +56,13 @@ body {
 .btnWrapper {
     flex-grow: 0;
 }
+
+.search {
+    font-weight: bold;
+    padding:5px;
+    text-align: center;
+}
+
 .inputWrapper {
     flex-grow: 2;
 }
@@ -60,43 +76,71 @@ body {
     border: 1px solid black;
 }
 
-.searchBtn {
-    padding:0;
+.searchBtn, .detailBtn {
+    padding:10px;
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: lightgray;
-    height: 100%;
     border-radius: 10px;
 
 
 }
 
+.results {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .resultsSection {
     width: 100%;
 }
-
-.artistWrapper {
+.discosWrapper {
+    width: 100%;
+}
+.artistWrapper,
+.discoWrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 80%;
-    margin: 5vh 10%;
+    width: 100%;
+    margin: 15px 0 ;
+    padding: 10px 10px;
     border:1px solid black;
+    border-radius: 10px;
 
 }
 
+.discoWrapper>.discoTitle {
+    width: 50%;
+    flex-grow: 1;
+}
+.discoWrapper>.discoYear{
+    flex-grow: 1;
+}
+
+.discoWrapper>.discoPic {
+    width: 150px;
+    flex-grow: 1;
+}
 
 .artistName {
     margin:1%;
 }
 
-.discWrapper {
-    width: 50%;
-    margin: 0 25%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border:1px solid black;
+.artistData.Pic {
+    width: 600px;
+}
+
+.discosWrapper {
+    display:flex;
+    flex-direction: column;
+}
+
+@media screen and (min-width: 980px) {
+    .wrapper {
+        width: 980px;
+    }
 }
