--- a/css/styles.css
+++ b/css/styles.css
@@ -1,146 +1,157 @@
 body {
-    margin:0;
+  margin: 0;
 }
 
 .header {
-    height: 10vh;
-    display: flex;
-    justify-content: center;
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+}
+
+.headerWrapper {
+  display: flex;
+  text-align: center;
+}
+
+.headerWrapper img {
+  height: 100%;
 }
 
 h1 a {
-    text-decoration: none;
-    color:black;
+  text-decoration: none;
+  color: black;
 }
 
 h2 {
-    text-align: center;
+  text-align: center;
 }
 .wrapper {
-    display:flex;
-    flex-flow: column;
-    margin: 0 auto;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-flow: column;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
 }
 .searchSection {
-    width: 100%;
-    height: 80vh;
-    display: flex;
-    align-items: center;
-    transition: height 1s;
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  align-items: center;
+  transition: height 1s;
 }
 
 .masterVersion {
-    height: 10vh;
+  height: 10vh;
 }
 
 .releaseImg {
-    width:200px;
+  width: 200px;
 }
 
 .searchWrapper {
-    display:flex;
-    align-items: center;
-    height:10vh;
-    width:100%
-
+  display: flex;
+  align-items: center;
+  height: 10vh;
+  width: 100%;
 }
 
-.searchWrapper>* {
-    margin: 10px;
-    height: 8vh;
-    flex-grow: 1;
+.searchWrapper > * {
+  margin: 10px;
+  height: 8vh;
+  flex-grow: 1;
 }
 
 .btnWrapper {
-    flex-grow: 0;
+  flex-grow: 0;
 }
 
 .search {
-    font-weight: bold;
-    padding:5px;
-    text-align: center;
+  font-weight: bold;
+  padding: 5px;
+  text-align: center;
 }
 
 .inputWrapper {
-    flex-grow: 2;
+  flex-grow: 2;
 }
 .searchInput {
-    width:100%;
-    padding:0;
-    margin:0;
-    height: 100%;
-    text-align: center;
-    border-radius: 10px;
-    border: 1px solid black;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  text-align: center;
+  border-radius: 10px;
+  border: 1px solid black;
 }
 
-.searchBtn, .detailBtn {
-    padding:10px;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: lightgray;
-    border-radius: 10px;
+.searchBtn,
+.detailBtn {
+  padding: 10px;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: lightgray;
+  border-radius: 10px;
+}
 
-
+.searchBtn:hover,
+.detailBtn:hover {
+    color:red;
 }
 
 .results {
-    display:flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .resultsSection {
-    width: 100%;
+  width: 100%;
 }
 .discosWrapper {
-    width: 100%;
+  width: 100%;
 }
 .artistWrapper,
 .discoWrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    margin: 15px 0 ;
-    padding: 10px 10px;
-    border:1px solid black;
-    border-radius: 10px;
-
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 95%;
+  margin: 15px 0;
+  padding: 10px 10px;
+  border: 1px solid black;
+  border-radius: 10px;
 }
 
-.discoWrapper>.discoTitle {
-    width: 50%;
-    flex-grow: 1;
+.discoWrapper > .discoTitle {
+  width: 50%;
+  flex-grow: 1;
 }
-.discoWrapper>.discoYear{
-    flex-grow: 1;
+.discoWrapper > .discoYear {
+  flex-grow: 1;
 }
 
-.discoWrapper>.discoPic {
-    width: 150px;
-    flex-grow: 1;
+.discoWrapper > .discoPic {
+  width: 150px;
+  flex-grow: 1;
 }
 
 .artistName {
-    margin:1%;
+  margin: 1%;
 }
 
 .artistData.Pic {
-    width: 600px;
+  width: 600px;
 }
 
 .discosWrapper {
-    display:flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 @media screen and (min-width: 980px) {
-    .wrapper {
-        width: 980px;
-    }
+  .wrapper {
+    width: 980px;
+  }
 }
