--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ h2 {
   flex-grow: 1;
 }
 
-.btnWrapper {
+.btnWrapper, .btnWrapper2 {
   flex-grow: 0;
 }
 
@@ -85,6 +85,7 @@ h2 {
 }
 
 .searchBtn,
+.searchBtn2,
 .detailBtn {
   padding: 10px;
   margin: 0;
@@ -96,6 +97,7 @@ h2 {
 }
 
 .searchBtn:hover,
+.searchBtn2:hover,
 .detailBtn:hover {
     color:red;
 }
