--- a/css/styles.css
+++ b/css/styles.css
@@ -2,99 +2,67 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Acme", sans-serif;
-  height: 100vh;
+
+}
+.headerWrapper {
+  height: 15vh;
 }
 
-.header {
-  height: 15vh;
+.headerWrapper a {
   display: flex;
   justify-content: center;
-}
-
-.headerWrapper {
-  display: flex;
-  text-align: center;
+  height: 100%;
 }
 
 .headerWrapper img {
   height: 100%;
 }
 
-h1 a {
-  text-decoration: none;
-  color: black;
-}
-
-h2 {
-  text-align: center;
-}
 .wrapper {
-  display: flex;
-  flex-flow: column;
+  width: 95%;
   margin: 0 auto;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
+
 .searchSection {
   width: 100%;
-  height: 70vh;
-  display: flex;
-  align-items: center;
-  transition: height 1s;
+  height: 75vh;
+  transition: height 0.5s;
 }
-
 .masterVersion {
-  height: 40vh;
-}
-
-.releaseImg {
-  width: 200px;
+  height: 125px;
 }
 
 .searchWrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  height: 10vh;
-  width: 100%;
+  justify-content: center;
+  height: 100%;
 }
-
-.searchWrapper > * {
-  margin: 10px;
-  height: 8vh;
-  flex-grow: 1;
-}
-.btnWrapper {
-  display: flex;
-}
-
-.searchBtnWrapper,
-.cleanBtnWrapper {
-  flex-grow: 0;
-}
-
-.search {
-  font-weight: bold;
-  padding: 5px;
-  text-align: center;
+.searchWrapper > div {
+  margin: 10px 0;
 }
 
 .inputWrapper {
-  width: 100%;
-}
-.searchInput {
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  height: 100%;
-  text-align: center;
-  border-radius: 10px;
-  border: 1px solid black;
+  width: 75%;
+  display: flex;
+  justify-content: center;
 }
 
-.detailBtnWrapper {
+.searchInput {
+  width: 100%;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 10px;
+  text-align: center;
+}
+
+.btnWrapper {
   display: flex;
+  justify-content: center;
 }
 
 .searchBtn,
@@ -106,32 +74,31 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: lightgray;
   border-radius: 10px;
   background-color: #ff0009;
   color: white;
-}
-.cacheBtn {
-  width: 100px;
-}
-.favBtn {
-  color:#ffd700;
-  font-size:2rem;
-  transition: color 0.25s;
-
-}
-.favBtn:hover {
-  color:#ff0009;
+  min-width: 25vw;
 }
 .searchBtn:hover,
 .cleanBtn:hover,
-.backBtn:hover,
 .cacheBtn:hover,
 .backBtn:hover {
-  background-color: #ffd700;
-  color: black;
+
+    background-color:#ffd700;
+    color:black;
+
 }
 
+
+
+.favBtn {
+  color: #ffd700;
+  transition: color 0.5s;
+  font-size: 2rem;
+}
+.favBtn:hover {
+  color: #ff0009;
+}
 
 .fav {
   color: #ff0009;
@@ -141,65 +108,49 @@ h2 {
   color: #ffd700;
 }
 
-footer {
-  display: flex;
-  justify-content: center;
-  margin: 10px;
-  height: 10vh;
-}
-
-.results {
+.artistWrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 15px;
+  margin: 5px;
 }
 
 .resultsSection {
   width: 100%;
 }
-.discosWrapper {
-  width: 100%;
-}
-.artistWrapper,
-.discoWrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 95%;
-  margin: 15px 0;
-  padding: 10px 10px;
-  border: 1px solid black;
-  border-radius: 10px;
+
+
+.results {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5px 30px;
+    /* border:1px solid black; */
+    border-radius: 10px;
+    text-align: justify;
+    line-height: 1.6 
+
 }
 
-.discoWrapper > .discoTitle {
-  width: 50%;
-  flex-grow: 1;
-}
-.discoWrapper > .discoYear {
-  flex-grow: 1;
+.detailBtnWrapper {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.discoWrapper > .discoPic {
-  width: 150px;
-  flex-grow: 1;
+.ArtistData.Pic {
+    width: 75%;
 }
 
-.artistName {
-  margin: 1%;
+h3 {
+    text-align: center;
 }
 
-.artistData.Pic {
-  width: 600px;
-}
-
-.discosWrapper {
-  display: flex;
-  flex-direction: column;
-}
-
-@media screen and (min-width: 980px) {
-  .wrapper {
-    width: 980px;
-  }
+.artistData.members {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 }
