--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,9 @@ body {
 }
 .headerWrapper {
   height: 15vh;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .headerWrapper a {
@@ -65,6 +68,7 @@ body {
   justify-content: center;
 }
 
+.headBtnAuth,
 .searchBtn,
 .cleanBtn,
 .cacheBtn,
@@ -79,6 +83,11 @@ body {
   color: white;
   min-width: 25vw;
 }
+
+/* .headBtnAuth {
+  width:100px;
+} */
+.headBtnAuth:hover,
 .searchBtn:hover,
 .cleanBtn:hover,
 .cacheBtn:hover,
