--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ body {
 .cacheBtn,
 .backBtn {
   padding: 10px;
-  margin: 10px;
+  margin: 3px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -115,6 +115,21 @@ body {
 
 .fav:hover {
   color: #ffd700;
+}
+
+#headFavBtn {
+  background-color: #ff0009;
+  color:white;
+  border-radius: 50%;
+  padding: 10px;
+}
+#headFavBtn:hover {
+  color:#ffd700
+}
+
+.headBtnWrapper {
+  display: flex;
+  align-items: center;
 }
 
 .artistWrapper {
